UY-1216 v1 no tests, UY-1215 QA fixes