@@ -11,6 +11,7 @@ import static org.junit.Assert.assertThat;
 
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.Before;
@@ -31,7 +32,7 @@ public class GroupAssemblyServiceTest
 	public void init()
 	{
 		SCIMEndpointDescription configuration = new SCIMEndpointDescription(URI.create("https://localhost:2443/scim"),
-				"/scim", List.of("/scim/Members1", "/scim/Members2"));
+				"/scim", List.of("/scim/Members1", "/scim/Members2"), Collections.emptyList());
 		groupAssemblyService = new GroupAssemblyService(configuration);
 	}
 
