@@ -12,6 +12,7 @@ import static org.junit.Assert.assertThat;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -36,7 +37,7 @@ public class UserAssemblyServiceTest
 	public void init()
 	{
 		SCIMEndpointDescription configuration = new SCIMEndpointDescription(URI.create("https://localhost:2443/scim"),
-				"/scim", List.of("/scim/Members1", "/scim/Members2"));
+				"/scim", List.of("/scim/Members1", "/scim/Members2"), Collections.emptyList());
 		assemblyService = new UserAssemblyService(configuration);
 	}
 
