@@ -10,6 +10,7 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doThrow;
 
 import java.net.URI;
+import java.util.Collections;
 import java.util.List;
 
 import org.assertj.core.api.Assertions;
@@ -37,7 +38,7 @@ public class UserAuthzServiceTest
 	public void init()
 	{
 		SCIMEndpointDescription configuration = new SCIMEndpointDescription(URI.create("https//localhost:2443/scim"),
-				"/scim", List.of("/scim/Members1", "/scim/Members2"));
+				"/scim", List.of("/scim/Members1", "/scim/Members2"), Collections.emptyList());
 		userAuthzService = new UserAuthzService(authzMan, configuration);
 	}
 
